--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,10 @@
    --black-dark: #262626;
    --black-medium: #323232;
    --geay: #888888;
+
+   --blue: #2F388E;
+   --green: #2F8E44;
+   --red: #C51D1D;
 }
 
 *{
