--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,33 +1,45 @@
-:root{
-   --black-dark: #262626;
-   --black-medium: #323232;
-   --geay: #888888;
+:root {
+    --black-dark: #262626;
+    --black-medium: #323232;
+    --geay: #888888;
 
-   --blue: #2F388E;
-   --green: #2F8E44;
-   --red: #C51D1D;
+    --blue: #2F388E;
+    --green: #2F8E44;
+    --red: #C51D1D;
 }
 
-*{
-   box-sizing: border-box;
-   margin: 0;
-   padding: 0;
-   text-decoration: none;
-   border: none
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    border: none;
+    background: none;
+    overflow: hidden;
+    resize: none;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  background-color: var(--black-dark);
+    background-color: var(--black-dark);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
+input[type=date]::-webkit-datetime-edit-year-field:not([aria-valuenow]),
+::-webkit-datetime-edit-month-field:not([aria-valuenow]),
+::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
+    color: transparent;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
