--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 :root {
     --black-dark: #262626;
     --black-medium: #323232;
-    --geay: #888888;
+    --gray: #888888;
 
     --blue: #2F388E;
     --green: #2F8E44;
