--- a/frontend/src/pages/goals/style.scss
+++ b/frontend/src/pages/goals/style.scss
@@ -26,3 +26,14 @@
       }
    }
 }
+
+.topButtons{
+    display: flex;
+    gap: 20px;
+}
+
+.signOutIcon{
+    width: 25px;
+    height: 25px;
+    color: white;
+}
